--- a/resources.css
+++ b/resources.css
@@ -4,13 +4,17 @@ body {
 }
 
 .title-banner {
-    height: 8em;
+    height: 4em;
     font-size: 4em;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #c4c4c4;
 }
+
+.title-banner div {
+    padding: 1% 5% 1% 5%;
+} 
 
 nav {
     width: 100%;
