--- a/resources.css
+++ b/resources.css
@@ -4,7 +4,7 @@ body {
 }
 
 .title-banner {
-    height: 4em;
+    height: 3em;
     font-size: 4em;
     display: flex;
     justify-content: center;
@@ -22,6 +22,10 @@ nav {
     background-color: #21296a;
 }
 
+nav .nav-link.active {
+    border-radius: 0;
+}
+
 .nav-item {
     display: flex;
     flex-basis: 25%;
@@ -36,3 +40,78 @@ nav {
     justify-content: center;
     align-items: center;
 }
+
+.carousel-title {
+    display:flex;
+    justify-content: center;
+    font-size: 4em;
+    padding: 1.25% 0;
+}
+
+.carousel-indicators {
+    position: relative!important;
+}
+
+.card img {
+    object-fit: contain;
+    height: 15em;
+    border-bottom: 1px solid grey;
+}
+
+.card-title {
+    align-self: flex-start;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-body p, .contact-type a {
+    margin: 0;
+    font-size: 1.25em;
+    font-weight: 200;
+}
+
+.contact-type strong {
+    font-size: 1.25em;
+}
+
+.card-body .collapse {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 10em;
+}
+
+.card-text {
+    height: 8em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.contact-type {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1.5%;
+    margin-bottom: 1.5%;
+}
+
+.card .btn {
+    margin-top: 1.5em;
+    width: 40%;
+    align-self: center;
+}
+
+section .card {
+    border-radius: 2.5em;
+    margin: 0 auto;
+    width: 60%;
+    max-height: 45em;
+    color: black;
+    line-height: 1;
+    padding: 1em;
+}
+
