--- a/donation.css
+++ b/donation.css
@@ -36,3 +36,40 @@ nav {
     justify-content: center;
     align-items: center;
 }
+.text{
+    color:black;
+    text-align:center;
+    font-weight:bold;
+    min-width:460px;
+    min-height:182px;
+}
+.images{
+     display:flex;
+     flex-direction:column;
+}
+.images .image1{
+    display:flex;
+    align-self:center;
+    width:45%;
+    height:50%;
+    /*display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;*/
+}
+.images .image2{
+    margin-top:10px;
+   display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+footer{
+    text-align:right;
+}
+@media screen and (min-width: 600px){
+    .images{
+    flex-direction:row;
+    }
+    
+}
