--- a/history.css
+++ b/history.css
@@ -1,1 +1,58 @@
+.title-banner {
+    height: 3em;
+    font-size: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #c4c4c4;
+}
 
+.title-banner div {
+    padding: 1% 5% 1% 5%;
+} 
+
+nav {
+    width: 100%;
+    height: 5em;
+    background-color: #21296a;
+}
+
+nav .nav-link.active {
+    border-radius: 0;
+}
+
+.nav-item {
+    display: flex;
+    flex-basis: 25%;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-item a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+@media (min-width: 800px){
+    .bigBox{
+    display: flex;
+    flex-direction: row;
+    height: 500px;
+}
+    .container{
+    width: 40%;
+    overflow-y: scroll;
+    }
+    
+    .container li{
+    margin: 30px;
+    }
+    
+    .stereotypes{
+    margin-left: 20px;
+    }
+}
