--- a/resources.css
+++ b/resources.css
@@ -42,6 +42,7 @@ nav .nav-link.active {
 }
 
 .carousel-title {
+    margin-top: 0.5em;
     display:flex;
     justify-content: center;
     font-size: 4em;
@@ -70,12 +71,17 @@ nav .nav-link.active {
 
 .card-body p, .contact-type a {
     margin: 0;
-    font-size: 1.25em;
+    font-size: 1.2em;
     font-weight: 200;
 }
 
-.contact-type strong {
-    font-size: 1.25em;
+.contact-type:nth-child(2) div{
+    display: flex;
+    flex-direction: row;
+}
+
+.contact-type:nth-child(2) a {
+    flex-grow:1;
 }
 
 .card-body .collapse {
@@ -90,6 +96,7 @@ nav .nav-link.active {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    line-height: 1.1em;
 }
 
 .contact-type {
@@ -97,6 +104,10 @@ nav .nav-link.active {
     flex-direction: column;
     margin-top: 1.5%;
     margin-bottom: 1.5%;
+}
+
+.contact-type strong {
+    font-size: 1.25em;
 }
 
 .card .btn {
@@ -109,9 +120,43 @@ section .card {
     border-radius: 2.5em;
     margin: 0 auto;
     width: 60%;
+    max-width: 35em;
     max-height: 45em;
     color: black;
     line-height: 1;
     padding: 1em;
 }
 
+@media (min-width: 1100px) {
+    #lawyers, #orgs {
+        display: none;
+    }
+    
+    .desktop-card-scroll {
+        padding: 1.25% 0;
+        display: flex!important;
+        flex-direction: row;
+        overflow-x: scroll;
+    }
+    
+    .desktop-card-scroll::-webkit-scrollbar {
+        background-color: black;
+    }
+    
+    .desktop-card-scroll::-webkit-scrollbar-thumb {
+        border-radius: 1em;
+        background-color: grey;
+    }
+    
+    .desktop-card-scroll .card {
+        margin: 0 2em;
+    }
+    
+    .desktop-card-scroll .card-text {
+        font-size: 1.1em!important;
+    }
+    
+    section .card {
+       min-width: 35em;
+    }
+}
