--- a/resources.css
+++ b/resources.css
@@ -1,52 +1,10 @@
-body {
-    background-color: black!important;
-    color: white!important;
-}
-
-.title-banner {
-    height: 3em;
-    font-size: 4em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #c4c4c4;
-}
-
-.title-banner div {
-    padding: 1% 5% 1% 5%;
-} 
-
-nav {
-    width: 100%;
-    height: 5em;
-    background-color: #21296a;
-}
-
-nav .nav-link.active {
-    border-radius: 0;
-}
-
-.nav-item {
-    display: flex;
-    flex-basis: 25%;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav-item a{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .carousel-title {
     margin-top: 0.5em;
     display:flex;
     justify-content: center;
     font-size: 4em;
     padding: 1.25% 0;
+    font-weight: normal;
 }
 
 .carousel-indicators {
@@ -132,20 +90,18 @@ section .card {
         display: none;
     }
     
+    .resource-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
     .desktop-card-scroll {
+        width: 95%;
         padding: 1.25% 0;
         display: flex!important;
         flex-direction: row;
         overflow-x: scroll;
-    }
-    
-    .desktop-card-scroll::-webkit-scrollbar {
-        background-color: black;
-    }
-    
-    .desktop-card-scroll::-webkit-scrollbar-thumb {
-        border-radius: 1em;
-        background-color: grey;
     }
     
     .desktop-card-scroll .card {
