--- a/basic.css
+++ b/basic.css
@@ -14,8 +14,14 @@ body * ::-webkit-scrollbar-thumb {
         background-color: grey;
 }
 
+header {
+    position: sticky;
+    z-index: 1;
+    top: 0;
+}
+
 .title-banner {
-    height: 3em;
+    height: 2.5em;
     font-size: 4em;
     display: flex;
     justify-content: center;
@@ -52,6 +58,13 @@ nav .nav-link.active {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 1.5em;
+    font-weight: 200;
+}
+
+.nav-item a:hover{
+    background-color: white;
+    border-radius: 0px;
 }
 
 .title {
@@ -87,6 +100,11 @@ footer {
     height: 100%;
     font-size: 2.75em;
     font-weight: 500;
+}
+
+.footer-banner a, .footer-banner a:hover {
+    color: white;
+    text-decoration: none;
 }
 
 .footer-copyright {
