--- a/index.css
+++ b/index.css
@@ -107,3 +107,15 @@ body {
     text-align: center;
     color: white;
 }
+
+.section1>.card1 {
+    font-family: 'Rowdies', cursive;
+    font-weight: normal;
+    text-align: center;
+    background-color: white;
+    border-radius: 15px;
+    display: block;
+    padding: 10px;
+    margin: 10px;
+    
+}
