--- a/why-it-matters.css
+++ b/why-it-matters.css
@@ -3,31 +3,39 @@
     color: #c48e27;
 }
 
-/*.border {*/
-/*    position: absolute;*/
-/*    left: 25%;*/
-/*    width: 275px;*/
-/*    height: 125px;*/
-/*    background: #FFFFFF;*/
-/*    border-radius: 18px;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    align-content: center;*/
-/*}*/
+.border {
+    /*position: absolute;*/
+    /*left: 25%;*/
+    /*width: 275px;*/
+    /*height: 125px;*/
+    background: #FFFFFF;
+    border-radius: 18px;
+    display: block;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    /*align-content: center;*/
+    padding: 10px;
+    margin: 10px;
+    
+}
 
-/*.border .container {*/
-/*    position: absolute;*/
-/*    width: 250px;*/
-/*    height: 100px;*/
-/*    background: rgba(234, 210, 172, 0.9);*/
-/*    border-radius: 18px;*/
-/*}*/
+.border .container {
+    /*position: absolute;*/
+    /*width: 250px;*/
+    /*height: 100px;*/
+    /*background: rgba(234, 210, 172, 0.9);*/
+    /*border-radius: 18px;*/
+}
 
-/*.border .container .item {*/
-/*    font-size: small;*/
-/*    text-align: justify;*/
-/*    font-weight: 200;*/
-/*    color: black;*/
-/*    margin: 10px;*/
-/*}*/
+.border .container .item {
+    font-size: small;
+    text-align: justify;
+    font-weight: 200;
+    color: black;
+    margin: 15px;
+}
+
+.itemLi {
+    list-style-type: none;
+    margin-bottom: 10px;
+}
