--- a/index.css
+++ b/index.css
@@ -176,6 +176,10 @@ footer div  {
     }
 }
 
+
+
+
+/* media querie for desktop view*/
 @media only screen and (min-width: 768px){
     main div {
         display: grid;
