--- a/about-us.css
+++ b/about-us.css
@@ -1,115 +1,81 @@
-/*Jan*/
-
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-
-.flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 200px;
-    perspective: 1000px;
-    border: 2px solid lightsalmon;
-    /* Remove this if you don't want the 3D effect */
+body {
+    background-color: #ecd6b4;
 }
 
-/* This container is needed to position the front and back side */
+/*------------------------------------------------------------*/
 
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 350px;
+    margin: auto;
+    margin-top: 15px;
+    /*margin-bottom: 250px;*/
     text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
-
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
+.title {
+    color: grey;
+    font-size: 18px;
 }
 
-/* Position the front and back side */
-
-.flip-card-front,
-.flip-card-back {
-    position: absolute;
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
     width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    /* Safari */
-    backface-visibility: hidden;
+    font-size: 18px;
 }
 
-/* Style the front side (fallback if image is missing) */
-
-.flip-card-front {
-    background-color: #bbb;
+a {
+    text-decoration: none;
+    font-size: 22px;
     color: black;
 }
 
-/* Style the back side */
-
-.flip-card-back {
-    background-color: wheat;
-    color: white;
-    transform: rotateY(180deg);
+button:hover,
+a:hover {
+    opacity: 0.7;
 }
 
-/*-----------------------------------------------------------------------------------------------------------*/
+/*------------------------------------------------------------*/
 
-/*Jason*/
-
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-
-.flip-card2 {
-    background-color: transparent;
-    width: 300px;
-    height: 200px;
-    perspective: 1000px;
-    border: 2px solid lightsalmon;
-    /* Remove this if you don't want the 3D effect */
-}
-
-/* This container is needed to position the front and back side */
-
-.flip-card-inner2 {
-    position: relative;
-    width: 100%;
-    height: 100%;
+.title1,
+li {
     text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
 
-.flip-card2:hover .flip-card-inner2 {
-    transform: rotateY(180deg);
+/*------------------------------------------------------------*/
+
+.bio {
+    border: 1px black solid;
+    display: block;
+    
 }
 
-/* Position the front and back side */
+.border {
+    background: #FFFFFF;
+    border-radius: 18px;
+    display: block;
+    padding: 10px;
+    margin: 10px;
 
-.flip-card-front2,
-.flip-card-back2 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    /* Safari */
-    backface-visibility: hidden;
 }
 
-/* Style the front side (fallback if image is missing) */
-
-.flip-card-front2 {
-    background-color: #bbb;
+.border .container .item {
+    font-size: small;
+    text-align: justify;
+    font-weight: 200;
     color: black;
+    margin: 15px;
 }
 
-/* Style the back side */
-
-.flip-card-back2 {
-    background-color: wheat;
-    color: white;
-    transform: rotateY(180deg);
+.itemLi {
+    list-style-type: none;
+    margin-bottom: 10px;
 }
