--- a/index.css
+++ b/index.css
@@ -105,9 +105,9 @@ mian div figure {
     
 }
     
-.causes-pic img {
-      width: 110%;
-      height: 600px;
+/*.causes-pic img {*/
+/*      width: 110%;*/
+/*      height: 600px;*/
      
 }
 
