--- a/reach-us.css
+++ b/reach-us.css
@@ -1,14 +1,19 @@
+body {
+  background-color: #9CAFB7;
+}
+
 form {
-  border: 3px solid #f1f1f1;
+  border: 3px solid #d3dbdf;
   font-family: Arial;
 }
 
 .container {
   padding: 20px;
-  background-color: #f1f1f1;
+  background-color: #d3dbdf;
 }
 
-input[type=text], input[type=submit] {
+input[type=text],
+input[type=submit] {
   width: 100%;
   padding: 12px;
   margin: 8px 0;
@@ -22,11 +27,21 @@ input[type=checkbox] {
 }
 
 input[type=submit] {
-  background-color: #fe938c;
-  color: white;
+  background-color: #405159;
+  color: #fff;
   border: none;
 }
 
 input[type=submit]:hover {
-  opacity: 0.8;
+  opacity: 0.7;
+}
+
+.formSection {
+  text-align: center;
+}
+
+.formSection h2 {
+  background: -webkit-linear-gradient(#a6b7bf, #566d76, #151b1e);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
