--- a/index.css
+++ b/index.css
@@ -196,9 +196,9 @@ footer div  {
     width: 100%;
     max-width: 100%;
     height: 600px;
-    /*max-height: 100%;*/
+    /*max-height: 100%;
 }
 .explanations{
     font-size-adjust: ;
-}
+}*/
 
