--- a/homepage.css
+++ b/homepage.css
@@ -75,7 +75,7 @@ a {
 /* this is all css for the nav bar, under this add the css for your code and section it off/*/
 
 main {
-height: 1000px;
+height: 1400px;
 border:solid 2px red;
 color: white;
 display: grid;
@@ -189,13 +189,24 @@ footer div  {
 /* media querie for desktop view*/
 @media only screen and (min-width: 768px){
     main div {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-        grid-gap:10%;
-        
-    }
-    
+    display: grid;
+    grid-template-rows: 200px 1fr 1fr;
+
+}
+
+.responsive {
+  width: 100%;
+  height: 400px;}
+
+
+ /*article {*/
+ /*    border:solid 3px yellow;*/
+ /*    height: 100%;*/
+ /*    width: 100%;*/
+ /*    display: flex;*/
+ /*    justify-content: center;*/
+     
+ /*}*/
 }
 
 
