--- a/what.css
+++ b/what.css
@@ -76,7 +76,7 @@ a {
 /* this is all css for the nav bar, under this add the css for your code and section it off/*/
 
 main {
-height: 1000px;
+height: 1200px;
 border:solid 2px red;
 color: white;
 display:grid;
@@ -85,19 +85,38 @@ grid-template-rows: 70% 1fr;
 /*justify-content: space-between;*/
 }
 
+
 main div {
     display: grid;
-    background-color: blue;
-    grid-template-rows: 1fr 1fr;
+    /*background-color: blue;*/
+    grid-template-rows: 75% 1fr;
+}
+img{
+    display: grid;
+    width:100%;
+    
+    height:100%;
+}
+main div figure {
+    display: grid;
+    grid-template-rows: 90% 1fr;
+    color: black;
+    /*background-color: yellow;*/
 }
 
-main div figure {
-    color: black;
-    background-color: yellow;
+main div figure figcaption {
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    font-size: 2vw;
 }
 
 main div article{
+    /*font-stretch: expanded;*/
     background-color: purple;
+    display: flex;
+    justify-content:center;
+    font-size: 2vw;
 }
 
 main aside {
@@ -185,7 +204,7 @@ footer div  {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
-        grid-gap:10%;
+        grid-gap:5%;
         
     }
     
