--- a/Homepage.css
+++ b/Homepage.css
@@ -72,78 +72,7 @@ a {
     color: black;
 }
 
-/* this is all css for the nav bar, under this add the css for your code and section it off/*/
-
-main {
-height: 1000px;
-border:solid 2px red;
-color: white;
-display: grid;
-grid-template-rows: flex;
-
-/*justify-content: space-between;*/
-}
-
-main div {
-    display: grid;
-    background-color: blue;
-    grid-template-rows: min-content;
-    background-size: contain;
-}
-main div figure {
-    color: black;
-    background-image: url("Polar Bear.jpg"), url("Sea Turtle.jpg");
-    background-color: #cccccc;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-
-.responsive {
-  width: 100%;
-  height: auto;}
-
-main div article {
-    background-color: purple;
-    grid-template-rows: max-content;
-}
-
-main aside {
-  width: 100%    !important;
-  height: auto   !important;
-}
-
-
-
-
-
-footer {
-    position: relative; 
-    bottom: 0;
-    font-size: 1.4em;
-    border:solid 2px red;
-    /*width: 100%;*/
-}
-
-footer div  {
-    margin-left:5%;
-    margin-right:5%;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    border: solid 2px green;
-}
-
-
-
-
-
-
-
-
-/*/ this is the media querie for the nav bar/ hamburger, under this add media queriy for your section*/
-
-@media only screen and (max-width: 768px) {
-    .nav-menu {
+ .nav-menu {
         position: fixed;
         left: -100%;
         top: 5rem;
@@ -183,32 +112,41 @@ footer div  {
         -webkit-transform: translateY(-8px) rotate(-45deg);
         transform: translateY(-8px) rotate(-45deg);
     }
-}
 
 
 
 
-/* media querie for desktop view*/
-@media only screen and (min-width: 768px){
-    main div {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
-        grid-gap:10%;
-        
-    }
-    
-}
+html, body { height: 100%; padding: 0; margin: 0; }
+div { width: 50%; height: 50%; float: left; position: relative; }
+#div1 { background: #DDD; }
+#div2 { background: #AAA; }
+#div3 { background: #777; }
+#div4 { background: #444; }
 
 
-/*.doomsdayphoto{
-    width: 400px;
+.overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-40%, -40%);
+    transform: translate( -25%, -29%);
     width: 100%;
-    max-width: 100%;
-    height: 600px;
-    /*max-height: 100%;*/
+    height: auto;
 }
-/*.explanations{
-    font-size-adjust: ;
+
+.div1 {
+    background-image: url("Polar Bear.jpg");
+    background-color: #cccccc;
+    background-size: contain;
+}
+
+.div3 {
+    background-image: contain;
+    overflow: hidden;
+}
+
+.responsive {
+  width: 100%;
+  height: auto;
 }
 
