--- a/bootstrap.css
+++ b/bootstrap.css
@@ -48,6 +48,29 @@ h1{
     justify-content: space-evenly;
     margin:25px 0;
 }
+
+.clock{
+    display: flex;
+    justify-content: space-evenly;
+    order:-3;
+
+}
+
+/*aside {*/
+/*    display: flex;*/
+/*    padding: 10px;*/
+/*    width: 100%;*/
+/*}*/
+
+
+
+iframe{
+    width: 100%;
+    height: 300px;
+    padding:  0 20px;
+    /*display: flex;*/
+    
+}
 /*main {*/
 /*height: 1200px;*/
 /*border:solid 2px red;*/
