--- a/bootstrap.css
+++ b/bootstrap.css
@@ -78,16 +78,20 @@ iframe{
     
 }
 
-footer{
-    display: flex;
-    justify-content: space-evenly;
+/*footer{*/
+/*    display: flex;*/
+/*    justify-content: space-evenly;*/
 
-}
+/*}*/
 
 
 body {
     max-width: 990px; 
     margin: auto; 
+}
+
+body.causes{
+    background-color: #343434;
 }
 /*main {*/
 /*height: 1200px;*/
