--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,3 +1,4 @@
+
 img {
     width:100%;
 }
@@ -78,11 +79,6 @@ iframe{
     
 }
 
-/*footer{*/
-/*    display: flex;*/
-/*    justify-content: space-evenly;*/
-
-/*}*/
 
 
 body {
@@ -94,120 +90,120 @@ body.causes{
     background-color: #343434;
     color: #FFFEF2;
 }
-/*main {*/
-/*height: 1200px;*/
-/*border:solid 2px red;*/
-/*color: white;*/
-/*display:grid;*/
-/*grid-template-rows: 70% 1fr;*/
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+/*.header{*/
+/*    border-bottom: 1px solid #E2E8F0;*/
 /*}*/
 
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+}
 
-/*main div {*/
-/*    display: grid;*/
-    /*background-color: blue;*/
-/*    grid-template-rows: 75% 1fr;*/
-/*}*/
-/*img{*/
-/*    display: grid;*/
-/*    width:100%;*/
-    
-/*    height:100%;*/
-/*}*/
-/*main div figure {*/
-/*    display: grid;*/
-/*    grid-template-rows: 90% 1fr;*/
-/*    color: black;*/
-    /*background-color: yellow;*/
-/*}*/
+.hamburger {
+    display: none;
+}
 
-/*main div figure figcaption {*/
-/*    display: flex;*/
-/*    justify-content:center;*/
-/*    align-items: center;*/
-/*    font-size: 2vw;*/
-/*}*/
+.bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #101010;
+}
 
-/*main div article{*/
-    /*font-stretch: expanded;*/
-/*    background-color: purple;*/
-/*    display: flex;*/
-/*    justify-content:center;*/
-/*    font-size: 2vw;*/
-/*}*/
+.nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-/*main aside {*/
-/*    background-color: green;*/
-/*}*/
+.nav-item {
+    margin-left: 5rem;
+}
 
+.nav-link{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #475569;
+}
 
-/*footer {*/
-/*    position: relative; */
-/*    bottom: 0;*/
-/*    font-size: 1.4em;*/
-/*    border:solid 2px red;*/
-    /*width: 100%;*/
-/*}*/
+.nav-link:hover{
+    color: #482ff7;
+}
 
-/*footer div  {*/
-/*    margin-left:5%;*/
-/*    margin-right:5%;*/
-/*    display:flex;*/
-/*    justify-content: space-between;*/
-/*    align-items: center;*/
-/*    border: solid 2px green;*/
-/*}*/
-
-
-
-
+.nav-logo {
+    font-size: 2.1rem;
+    font-weight: 500;
+    color: black;
+}
 
 
 /*/ this is the media querie for the nav bar/ hamburger, under this add media queriy for your section*/
 
 @media only screen and (max-width: 768px) {
-    /*.nav-menu {*/
-    /*    position: fixed;*/
-    /*    left: -100%;*/
-    /*    top: 5rem;*/
-    /*    flex-direction: column;*/
-    /*    background-color: #fff;*/
-    /*    width: 100%;*/
-    /*    border-radius: 10px;*/
-    /*    text-align: center;*/
-    /*    transition: 0.3s;*/
-    /*    box-shadow:*/
-    /*        0 10px 27px rgba(0, 0, 0, 0.05);*/
-    /*}*/
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        background-color: #fff;
+        width: 100%;
+        /*border-radius: 10px;*/
+        text-align: center;
+        transition: 0.3s;
+        box-shadow:
+            0 10px 27px rgba(0, 0, 0, 0.05);
+    }
 
-    /*.nav-menu.active {*/
-    /*    left: 0;*/
-    /*}*/
+    .nav-menu.active {
+        left: 0;
+        z-index: 1;
+    }
 
-    /*.nav-item {*/
-    /*    margin: 2.5rem 0;*/
-    /*}*/
+    .nav-item {
+        margin: 2.5rem 0;
+    }
 
-    /*.hamburger {*/
-    /*    display: block;*/
-    /*    cursor: pointer;*/
-    /*}*/
+    .hamburger {
+        display: block;
+        cursor: pointer;
+    }
 
-    /*.hamburger.active .bar:nth-child(2) {*/
-    /*    opacity: 0;*/
-    /*}*/
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
 
-    /*.hamburger.active .bar:nth-child(1) {*/
-    /*    -webkit-transform: translateY(8px) rotate(45deg);*/
-    /*    transform: translateY(8px) rotate(45deg);*/
-    /*}*/
+    .hamburger.active .bar:nth-child(1) {
+        -webkit-transform: translateY(8px) rotate(45deg);
+        transform: translateY(8px) rotate(45deg);
+    }
 
-    /*.hamburger.active .bar:nth-child(3) {*/
-    /*    -webkit-transform: translateY(-8px) rotate(-45deg);*/
-    /*    transform: translateY(-8px) rotate(-45deg);*/
-    /*}*/
+    .hamburger.active .bar:nth-child(3) {
+        -webkit-transform: translateY(-8px) rotate(-45deg);
+        transform: translateY(-8px) rotate(-45deg);
+    }
     
-    
+   .row > * {
+    width: 100%;
+    overflow: hidden;
+}
+ div.row {
+    overflow: hidden;
+    display: block;
+}
     
     
 }
