added class ruleset for each html page

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -97,6 +97,13 @@ body.causes{
     background-color: #343434;
     color: #FFFEF2;
 }
+body.what{
+    
+}
+body.solutions{
+    
+}
+body.effects
 /* nav bar css*/
 li {
     list-style: none;
