--- a/stories.css
+++ b/stories.css
@@ -1,12 +1,13 @@
 body{
-    background-color: red;
+    background-color: white;
 }
 main{
     width:100%;
-    background-color: blue;
     display:grid;
 }
 nav{
+    width: 100%;
+    background-color: grey;
     display: grid;
     grid-template-columns:1fr 2fr 1fr;
     align-items:center;
@@ -16,4 +17,12 @@ nav{
     max-width: 30%;
     display: flex;
     align-content: flex-end;
+}
+.subway-Shooting{
+    
+}
+.subway{
+    /*max-height: 30%;*/
+    height:500px;
+    width:500px;
 }
