--- a/landingpage.css
+++ b/landingpage.css
@@ -15,12 +15,12 @@ h4{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: black;
+    background-color: white;
     
 }
 
-.link{
+.links{
     display:flex;
     flex-direction:row;
-    
+    justify-content: space-between;
 }
