--- a/gallery.css
+++ b/gallery.css
@@ -36,7 +36,9 @@ button.navbar-toggler {
     color: #fff !important;
     background-color: #29292c !important;
 }
-
+.earth-logo{
+    width:2em;
+}
 /*.navbar-default {*/
 /*    background-color: none;*/
 /*    border-color: none;*/
