--- a/additional.css
+++ b/additional.css
@@ -5,3 +5,10 @@ section{
    background-color: 
 #d6d6d6;
 }
+footer{
+    background-color: #aad9a6;
+}
+img{
+    height: 100px;
+    width: 100px;
+}
