--- a/gallery.css
+++ b/gallery.css
@@ -75,3 +75,8 @@ main {
     width: 100%;
     height: 300px;
 }
+.gallery-photos{
+    max-width: 275px;
+    width: 100%;
+    max-height: 200px;
+}
