landingpage as well as css.

--- a/landingpage.css
+++ b/landingpage.css
@@ -25,3 +25,27 @@ h4{
     flex-direction:row;
     justify-content: space-between;
 }
+#carousel-example-generic img{
+  width:100%;
+}
+  .carousel-inner{
+    margin: 0 auto ;
+  width:80%;
+  max-height: 500px !important;
+  
+}
+.navbarbox{
+    background-color: #254E58;
+    text-color: white;
+}
+.navbar-nav{
+  background-color: tan;
+}
+
+.winter{
+    height:50%;
+}
+.navbar{
+   text-color: tan;
+   background-color: tan;
+}
