--- a/stories.css
+++ b/stories.css
@@ -1,18 +1,9 @@
-body {
-    background-color: white;
+.buffalo {
+    margin-top:120px;
 }
-
-main {
-    width: 100%;
-    display: grid;
+.col{
+    color:red;
 }
-
-.subway-Shooting {
+.bottom{
     
-}
-
-.subway {
-    /*max-height: 30%;*/
-    height: 500px;
-    width: 500px;
 }
