--- a/apps.css
+++ b/apps.css
@@ -1,3 +1,37 @@
-#boroughs{
+.container1{
+    display:flex;
+    justify-content:center;
     
+}
+
+.container2{
+   display:flex; 
+   justify-content:center;
+}
+
+main{
+    background-color: #112D32;
+    
+}
+
+body{
+    background-color: #112D32;
+}
+.card{
+    background-color: #88BDBC!important;
+    animation-name: fadeInDown;
+    animation-duration:3s;
+
+}
+
+
+.title{
+    max-width:100%;
+    background-color:#88BDBC ;
+    display:flex;
+    justify-content:center;
+}
+
+.row{
+    margin-top:4% !important;
 }
