--- a/landing-page/styles.css
+++ b/landing-page/styles.css
@@ -12,6 +12,10 @@ h5{
         font-style: italic;
 }
 
+h6{
+    padding-right: 3%;
+}
+
 .container{
     max-width: 100%;
     padding-left: 0%;
@@ -136,6 +140,7 @@ nav{
 }
 
 .resource>a{
+    font-weight: 900;
     color: white;
     text-decoration: none;
 }
@@ -177,15 +182,21 @@ hr{
     
 }
 
+.footer-contact>h6{
+    font-weight: 900;
+}
+
 .footer-contact{
     color: white;
     text-align: right;
-    padding-right: 5%;
+    padding-right: 2%;
+   
 }
 
 .footer-contact>a{
     text-decoration: none;
     color:white;
+     font-weight: 400;
 }
 
 @media only screen and (min-width: 600px) {
@@ -308,7 +319,7 @@ min-width: 25%;
 .footer-contact{
     color: white;
     text-align: right;
-    padding-right: 5%;
+    padding-right: 8%;
 }
 
 .footer-contact>a{
