--- a/learn-more/learn-more.css
+++ b/learn-more/learn-more.css
@@ -2,10 +2,6 @@ i {
     color: white;
 }
 
-nav {
-    background-color: #8F2D56;
-}
-
 h2 {
     background-color: #006BA6;
     color: white;
@@ -13,30 +9,30 @@ h2 {
     justify-content:center;
 }
 
-#row1 {
+#row1, #row4 {
     background-color: #FFBC42;
 }
 
-#row2 {
+#row2, #row5 {
     background-color: #D81159;
 }
 
-#row3 {
+#row3, #row6 {
     background-color: #0496FF;
 }
 
 
 
 @media screen and (max-width: 991.98px) {
-    #col1, #col3, #col8 {
+    #col1, #col3, #col8, #col10, #col12, #col17 {
         background-color: #FFBC42; 
     } /*yellow*/
     
-    #col2, #col4, #col6 {
+    #col2, #col4, #col6, #col11, #col13, #col15 {
         background-color: #D81159;
     } /*red*/
     
-    #col5, #col7, #col9 {
+    #col5, #col7, #col9, #col14, #col16, #col18 {
         background-color: #0496FF;
     } /*blue*/
 }
