--- a/landingpage.css
+++ b/landingpage.css
@@ -2,7 +2,9 @@
 .section{
     
 }
-
+main{
+    margin: 10px;
+}
 h1{
     color:tan;
 }
@@ -30,8 +32,8 @@ h4{
 }
   .carousel-inner{
     margin: 0 auto ;
-  width:80%;
-  max-height: 500px !important;
+  width:95%;
+  
   
 }
 .navbarbox{
@@ -49,3 +51,4 @@ h4{
    text-color: tan;
    background-color: tan;
 }
+
