--- a/apps.css
+++ b/apps.css
@@ -1,12 +1,14 @@
 .container1{
     display:flex;
     justify-content:center;
+    margin-bottom: 4%
     
 }
 
 .container2{
    display:flex; 
    justify-content:center;
+   margin-bottom: 4%
 }
 
 main{
@@ -34,4 +36,37 @@ body{
 
 .row{
     margin-top:4% !important;
+}
+
+#bkImg{
+    width:239px;
+    height:160px;
+}
+#qnsImg{
+    width:239px;
+    height:160px;
+}
+
+#bxImg{
+    width:239px;
+    height:160px;
+}
+
+#bkImg2{
+    width:239px;
+    height:160px;
+}
+
+#manImg2{
+    width:239px;
+    height:160px;
+}
+
+#siImg2{
+    width:239px;
+    height:160px;
+}
+
+.card-title{
+    text-align: center;
 }
