--- a/action.css
+++ b/action.css
@@ -1,8 +1,33 @@
-.steps {
+.section_1{
+    display: flex;
     width: 100%;
     background-color: #BC2C3D;
     color: #F8F3E6;
 }
+.steps {
+    margin-left: 5em;
+    margin-top: 5em;
+}
 .stepsp {
     width: 60%;
+}
+.banGunsImg{
+    width: 10%;
+    margin-right: 5em;
+}
+.section_2{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background-color: #F8F3E6;
+    color: #BC2C3D;
+}
+.footsteps{
+   width: 10%;
+   margin-left: 5em;
+}
+.section_2_texts{
+    width: 60%;
+    margin-right: 5em;
+    margin-top: 5em;
 }
